Three.js added. First init.

--- a/css/main.css
+++ b/css/main.css
@@ -13,5 +13,5 @@
     color: #eee;
 }
 body {
-    background: #656685 url(../img/city.jpg) no-repeat center top;
+    /*background: #656685 url(../img/city.jpg) no-repeat center top;*/
 }
